--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#EE171F</color>
+    <color name="colorPrimaryDark">#BB1C1F</color>
+    <color name="colorAccent">#EA2427</color>
+    <color name="colorLoginBackground">#00162C</color>
+
+    <color name="gray">#333</color>
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
 </resources>
