--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#BB1C1F</color>
     <color name="colorAccent">#EA2427</color>
     <color name="colorLoginBackground">#00162C</color>
+    <color name="checkboxTextColor">#47525E</color>
+
 
     <color name="gray">#333</color>
     <color name="white">#fff</color>
