--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,10 @@
     <color name="colorPrimaryDark">#BB1C1F</color>
     <color name="colorAccent">#EA2427</color>
     <color name="colorLoginBackground">#00162C</color>
-    <color name="checkboxTextColor">#47525E</color>
+    <color name="checkboxText">#47525E</color>
+    <color name="textCreateAccount">#343F4B</color>
+    <color name="shapeRound">#EFF2F5</color>
+
 
 
     <color name="gray">#333</color>
