--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorLoginBackground"
     android:padding="@dimen/dim_16_dp"
-    tools:context=".LoginActivity">
+    tools:context=".login.view.LoginActivity">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
