--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,15 +7,13 @@
     android:layout_height="match_parent"
     android:background="@color/colorLoginBackground"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".login.view.RegisterActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:elevation="@dimen/dim_4_dp"
-        android:layout_margin="-16dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ToolbarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +26,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorLoginBackground"
     android:padding="@dimen/dim_16_dp"
-    tools:context=".RegisterActivity">
+    tools:context=".login.view.RegisterActivity">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
