--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,6 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="@dimen/dim_8_dp"
+    android:orientation="vertical"
+    android:background="@color/colorLoginBackground">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dim_8_dp"
+        app:cardCornerRadius="@dimen/dim_0_dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgCoverRecycler"
+            android:adjustViewBounds="true"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            tools:src="@drawable/cover"
+            android:background="@color/white"
+            android:layout_margin="@dimen/dim_4_dp"/>
+
+            <TextView
+                android:id="@+id/txtNumberRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="#96"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:background="@color/colorLoginBackground"
+                android:textSize="@dimen/dim_16_sp"/>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+    
+    
+</LinearLayout>
