--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="gray">#333</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="transBlack">#81392F1F</color>
 </resources>
