--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,32 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorLoginBackground"
-    android:orientation="vertical"
-    tools:context=".login.view.RegisterActivity">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tbRegister"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ToolbarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/white" />
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorLoginBackground"
     android:padding="@dimen/dim_16_dp"
-    tools:context=".login.view.RegisterActivity">
+    tools:context=".login.view.LoginFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
@@ -60,30 +40,14 @@
             android:padding="@dimen/dim_16_dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tfNameRegister"
+                android:id="@+id/tfEmailLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dim_16_dp"
-                android:hint="@string/name">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etNameRegister"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:inputType="text" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tfEmailRegister"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dim_12_dp"
                 android:hint="@string/e_mail">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etEmailRegister"
+                    android:id="@+id/etEmailLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
@@ -92,65 +56,74 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tfPassRegister"
+                android:id="@+id/tfPassLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etPassRegister"
+                    android:id="@+id/etPassLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:inputType="textPassword" />
-
             </com.google.android.material.textfield.TextInputLayout>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dim_minus8_dp"
+                android:text="@string/remember"
+                android:textColor="@color/checkboxText" />
 
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnLoginLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="@color/colorAccent"
         android:padding="@dimen/dim_10_dp"
-        android:text="@string/save"
+        android:text="@string/log_in"
         android:textSize="@dimen/dim_16_sp"
-        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
-        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
-        app:layout_constraintStart_toStartOf="@+id/materialCardView" />
+        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/dim_130_dp"
-        android:layout_height="@dimen/dim_130_dp"
+    <TextView
+        android:id="@+id/txtCreateAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:elevation="@dimen/dim_8_dp"
+        android:focusable="true"
+        android:text="@string/create_account"
+        android:textAlignment="center"
+        android:textColor="@color/textCreateAccount"
+        android:textSize="@dimen/dim_20_sp"
+        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
+        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
+        app:layout_constraintStart_toStartOf="@+id/materialCardView2" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:elevation="@dimen/dim_4_dp"
-        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
+        android:text="@string/welcome"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/dim_24_sp"
+        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/materialCardView2"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_baseline_brightness_1_24"
-        app:tint="@color/shapeRound" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="@dimen/dim_70_dp"
-        android:layout_height="@dimen/dim_70_dp"
-        android:layout_weight="1"
-        android:elevation="@dimen/dim_8_dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.45"
-        app:srcCompat="@drawable/register_icon" />
+        app:layout_constraintTop_toTopOf="@+id/materialCardView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+
