--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,9 @@
     <color name="checkboxText">#47525E</color>
     <color name="textCreateAccount">#343F4B</color>
     <color name="shapeRound">#EFF2F5</color>
+    <color name="colorIssueNumber">#C0CCDA</color>
 
-
-
+    <color name="fullTrans">#00FFFFFF</color>
     <color name="gray">#333</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
