--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,104 +24,41 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="140dp"
-                android:layout_height="40dp"
-                app:srcCompat="@drawable/marvel_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dim_40_dp"
+                android:layout_marginStart="@dimen/dim_20_dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/marvel_logo"
                 android:scaleType="fitStart"
-                android:layout_marginStart="@dimen/dim_20_dp"/>
+                app:srcCompat="@drawable/marvel_logo" />
         </com.google.android.material.appbar.MaterialToolbar>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <ProgressBar
         android:id="@+id/loading"
-        android:elevation="@dimen/dim_4_dp"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="@dimen/dim_4_dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        style="?android:attr/progressBarStyle"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dim_12_dp"
-            android:layout_marginTop="@dimen/dim_40_dp"
-            android:layout_marginEnd="@dimen/dim_12_dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            android:paddingBottom="@dimen/dim_60_dp"
-            android:paddingTop="@dimen/dim_40_dp"
-            tools:listitem="@layout/item_card_home" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dim_12_dp"
+        android:layout_marginTop="@dimen/dim_40_dp"
+        android:layout_marginEnd="@dimen/dim_12_dp"
+        android:paddingTop="@dimen/dim_40_dp"
+        android:paddingBottom="@dimen/dim_60_dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        tools:listitem="@layout/list_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:background="@color/colorLoginBackground"-->
-<!--    android:orientation="vertical"-->
-<!--    tools:context=".HomeActivity">-->
-
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/toolbarHome"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="?attr/colorPrimary"-->
-<!--            android:elevation="@dimen/dim_4_dp"-->
-<!--            android:minHeight="?attr/actionBarSize"-->
-<!--            android:padding="16dp"-->
-<!--            android:theme="@style/ToolbarTheme"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:titleTextColor="@color/white" />-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView4"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:adjustViewBounds="true"-->
-<!--            android:elevation="@dimen/dim_8_dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/toolbarHome"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/toolbarHome"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/toolbarHome"-->
-<!--            app:srcCompat="@drawable/marvel_logo" />-->
-
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/comicRecyclerView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/toolbarHome"-->
-<!--            tools:listitem="@layout/list_item" />-->
-
-<!--        <ProgressBar-->
-<!--            android:id="@+id/loading"-->
-<!--            style="?android:attr/progressBarStyle"-->
-<!--            android:layout_width="140dp"-->
-<!--            android:layout_height="219dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--</LinearLayout>-->
